--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-export const API_URL = "https://kdt-frontend.programmers.co.kr/documents";
+API_END_POINT="https://kdt-frontend.programmers.co.kr/documents";
